[FIX] Fixed horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding: 10px;
-  width: 100%;
+  width: 98%;
   color: #fff;
   font-size: 1.3em;
 }
